build/log/idf_py_stderr_output_136513
Command: make -j 14 all
Configuration Report                     
 ─────────────────────────────────────── 
   Parser Version: 1                     
   Verbosity: default                    
   Status: Finished with notifications   
                                         
 ─────────────────────────────────────── 
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:2:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.h:14:16: warning: 'adc_val' initialized and declared 'extern'
   14 | extern int16_t adc_val = 0;
      |                ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:6:9: error: redefinition of 'adc_val'
    6 | int16_t adc_val = 0;
      |         ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.h:14:16: note: previous definition of 'adc_val' with type 'int16_t' {aka 'short int'}
   14 | extern int16_t adc_val = 0;
      |                ^~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:35:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.h:14:16: warning: 'adc_val' initialized and declared 'extern'
   14 | extern int16_t adc_val = 0;
      |                ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c: In function 'read_adc':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:24:67: error: 'raw_val' undeclared (first use in this function)
   24 |     esp_err_t ret = adc_oneshot_read(adc1_handle, ADC_CHANNEL_0, &raw_val);
      |                                                                   ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.c:24:67: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:167: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/interr_event.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:33,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/per_intr.c:17:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.h:33:13: warning: 'mqtt_event_handler' declared 'static' but never defined [-Wunused-function]
   33 | static void mqtt_event_handler(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data);
      |             ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/per_intr.c:80:23: warning: 'disp_isr_handler' defined but not used [-Wunused-function]
   80 | static void IRAM_ATTR disp_isr_handler(void *arg)
      |                       ^~~~~~~~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:33,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/network.h:25,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/network.c:17:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.h:33:13: warning: 'mqtt_event_handler' declared 'static' but never defined [-Wunused-function]
   33 | static void mqtt_event_handler(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data);
      |             ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c: In function 'mqtt_event_handler':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c:27:29: warning: unused variable 'event' [-Wunused-variable]
   27 |     esp_mqtt_event_handle_t event = event_data;
      |                             ^~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:53:5: error: conflicting types for 'adc_val'; have 'int'
   53 | int adc_val;
      |     ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.h:14:16: note: previous definition of 'adc_val' with type 'int16_t' {aka 'short int'}
   14 | extern int16_t adc_val = 0;
      |                ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c: In function 'app_main':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:80:29: error: 'delay_task' undeclared (first use in this function)
   80 |     xTaskCreatePinnedToCore(delay_task, "delay_task", 2048, NULL, 5, &delay_task_handle, 1);
      |                             ^~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:80:29: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:28:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/display.h: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/display.h:58:18: warning: 'ssd1306_write_cmd' declared 'static' but never defined [-Wunused-function]
   58 | static esp_err_t ssd1306_write_cmd(uint8_t cmd);
      |                  ^~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/display.h:59:18: warning: 'ssd1306_write_data' declared 'static' but never defined [-Wunused-function]
   59 | static esp_err_t ssd1306_write_data(uint8_t* data, size_t len);
      |                  ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/interr_event.h:15:23: warning: 'read_adc' declared 'static' but never defined [-Wunused-function]
   15 | static inline int16_t read_adc(void);
      |                       ^~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:33,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/network.h:25,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:38:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.h:33:13: warning: 'mqtt_event_handler' declared 'static' but never defined [-Wunused-function]
   33 | static void mqtt_event_handler(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data);
      |             ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:51:34: warning: 'adc1_handle' defined but not used [-Wunused-variable]
   51 | static adc_oneshot_unit_handle_t adc1_handle = NULL;
      |                                  ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:63: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'initialize_sntp':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:460:9: warning: 'sntp_setoperatingmode' is deprecated: use esp_sntp_setoperatingmode() instead [-Wdeprecated-declarations]
  460 |         sntp_setoperatingmode(SNTP_OPMODE_POLL);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:34,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:16:
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:461:9: warning: 'sntp_setservername' is deprecated: use esp_sntp_setservername() instead [-Wdeprecated-declarations]
  461 |         sntp_setservername(0, "pool.ntp.org");
      |         ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:263:6: note: declared here
  263 | void sntp_setservername(u8_t idx, const char *server)
      |      ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:462:9: warning: 'sntp_init' is deprecated: use esp_sntp_init() instead [-Wdeprecated-declarations]
  462 |         sntp_init();
      |         ^~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:269:6: note: declared here
  269 | void sntp_init(void)
      |      ^~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:33:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.h: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.h:33:13: warning: 'mqtt_event_handler' declared 'static' but never defined [-Wunused-function]
   33 | static void mqtt_event_handler(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data);
      |             ^~~~~~~~~~~~~~~~~~
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
